--- a/src/assets/styles/Register.css
+++ b/src/assets/styles/Register.css
@@ -1,6 +1,6 @@
-.login-container {
+.register-container {
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
@@ -10,29 +10,35 @@
     width: 300px;
 }
 
-.login-container h2 {
+.register-container .form-group{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.register-container h2 {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.login-container form {
+.register-container form {
     display: flex;
     flex-direction: column;
 }
 
-.login-container label {
+.register-container label {
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.login-container input {
+.register-container input {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 15px;
 }
 
-.login-container button {
+.register-container button {
     background-color: #007bff;
     color: white;
     padding: 10px;
@@ -44,6 +50,6 @@
     font-weight: bold;
 }
 
-.login-container button:hover {
+.register-container button:hover {
     background-color: #0056b3;
 }
