Main page finished

--- a/src/assets/styles/include/Footer.css
+++ b/src/assets/styles/include/Footer.css
@@ -5,7 +5,7 @@ footer {
     color: #adadad;
     background-color: #cbcfec;
     border-top: 1px solid silver;
-    position: fixed;
+    position: static;
     bottom: 0;
     left: 0;
     right: 0;
