--- a/src/assets/styles/include/Header.css
+++ b/src/assets/styles/include/Header.css
@@ -63,12 +63,13 @@ header {
     color: #8c8a8a;
 }
 
-#login-button {
+#login-button, #admin-page-button {
     border: 2px solid #2691d9;
     background: #2691d9;
-    width: 85px;
+    padding: 8px;
+    width: 95px;
     border-radius: 15px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #e9f4fb;
     font-weight: 700;
     cursor: pointer;
@@ -76,7 +77,7 @@ header {
     text-align: center;
 }
 
-#login-button:hover {
+#login-button:hover, #admin-page-button:hover {
     opacity: 0.9;
     box-shadow: 5px 4px 8px 0 rgba(0, 0, 0, 0.3);
     transition: .5s;
