--- a/src/assets/styles/auth/Login.css
+++ b/src/assets/styles/auth/Login.css
@@ -1,13 +1,17 @@
+
 .login-container {
-    position: absolute;
     top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     padding: 20px;
+    margin: 20px auto;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 300px;
+}
+
+.login-place-holder {
+    height: calc(100vh - (111px + 96px + 287px + 40px));
 }
 
 .login-container h2 {
