--- a/src/assets/styles/auth/Register.css
+++ b/src/assets/styles/auth/Register.css
@@ -1,10 +1,9 @@
 .register-container {
-    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     padding: 20px;
+    margin: 20px auto;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 300px;
