--- a/src/assets/styles/include/Pagination.css
+++ b/src/assets/styles/include/Pagination.css
@@ -1,12 +1,13 @@
 .bottom-container {
     display: flex;
     width: 100%;
+    background: #ffffff;
     position: static;
-    bottom: 80px;
+    bottom: 0;
+    border-top: 1px solid silver;
     justify-content: center;
     align-items: center;
 }
-
 
 .pagination {
     display: flex;
