--- a/src/assets/styles/include/SearchBox.css
+++ b/src/assets/styles/include/SearchBox.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 0;
+    width: 50%; /* Займає половину ширини сторінки */
+    margin: 5px auto; /* Вирівнювання по центру */
 }
 
 .search-box {
@@ -13,7 +14,7 @@
 .search-form-input {
     background: #efefef;
     appearance: none;
-    width: 70%;
+    width: 100%;
     padding: 5px 20px 5px 40px;
     border: none;
     border-radius: 15px 0 0 15px;
