--- a/src/assets/styles/include/SearchBox.css
+++ b/src/assets/styles/include/SearchBox.css
@@ -1,38 +1,69 @@
 .search-box-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%; /* Займає половину ширини сторінки */
-    margin: 5px auto; /* Вирівнювання по центру */
+    flex-direction: column;
+    background: #9b9999;
+    width: 40%;
+    margin: 15px auto;
 }
 
 .search-box {
     display: flex;
-    width: 100%;
+    flex-direction: column;
 }
 
-.search-form-input {
-    background: #efefef;
+.search-form-input-name,
+.search-form-input-description {
+    background: #ffffff;
     appearance: none;
-    width: 100%;
-    padding: 5px 20px 5px 40px;
+    padding: 10px;
     border: none;
-    border-radius: 15px 0 0 15px;
-    color: #8c8a8a;
+    border-radius: 15px;
+    color: #bdbbbb;
+    margin-bottom: 10px;
     font-size: 1rem;
+    width: 100%;
+    font-family: inherit;
+    box-sizing: border-box;
+
 }
 
-.dropdown {
-    top: 0;
-    left: 0;
+.search-form-input-description {
+    height: 100px;
+}
+
+.search-form-toggle {
     cursor: pointer;
     background: #efefef;
     border: none;
     border-left: 1px solid #dddddd;
     padding: 15px 5px;
-    border-radius: 0 15px 15px 0;
+    border-radius: 15px 15px 0 0;
     list-style: none;
     color: #8c8a8a;
     font-size: 1rem;
+    display: flex;
     justify-content: center;
+}
+
+.search-form-content {
+    border-radius: 0 0 15px 15px;
+    background: #efefef;
+    padding: 10px;
+}
+.search-form-input{
+    flex-direction: column;
+}
+
+#search-form-button {
+    padding: 12px;
+    font-size: 1rem;
+    width: 20%;
+    margin: 0 75%;
+}
+
+
+.search-form-button:hover {
+    opacity: 0.8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: .5s;
 }
