--- a/src/assets/styles/CertificateForm.css
+++ b/src/assets/styles/CertificateForm.css
@@ -16,6 +16,16 @@
     margin-bottom: 16px;
 }
 
+.textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    resize: vertical; /* Дозволяємо вертикальне зміщення розміру */
+}
+
+
 .text-field {
     width: 100%;
 }
