Fixing errors and code improvements

--- a/src/assets/styles/include/Header.css
+++ b/src/assets/styles/include/Header.css
@@ -106,7 +106,7 @@ header {
 .adminUI-name {
     padding-left: 15px;
     color: #2691d9;
-    font-size: 2rem;
+    font-size: 28px;
     font-weight: bold;
 }
 
