--- a/src/assets/styles/include/SearchBox.css
+++ b/src/assets/styles/include/SearchBox.css
@@ -18,7 +18,7 @@
     padding: 10px;
     border: none;
     border-radius: 15px;
-    color: #bdbbbb;
+    color: #000000;
     margin-bottom: 10px;
     font-size: 1rem;
     width: 100%;
